syntax = "proto3";

option csharp_namespace = "SimpleGRPC.Protos";
package student;
service StudentRPC{
	rpc GetStudentDetail(GetStudentRequest) returns (GetStudentReply);
}
message GetStudentRequest{
	string id = 1;
}
message GetStudentReply{
	string id = 1;
	string name = 2;
	string address = 3;
	string dob = 4;
}